2010-05-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct wlink’ more.

	* ci.c (addelta, main): Do s/struct hshentries/struct wlink/g;
	use ->entry, ->next instead of ->first, ->rest, respectively; use
	local var of type ‘struct delta *’ to deref ->entry where necessary.
	* co.c (main): Likewise.
	* rcs.c (searchcutpt, removerevs, buildeltatext, main): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsgen.c (buildrevision): Likewise.
	* rcsrev.c (store1, genbranch, genrevs, gr_revno): Likewise.
	* yarrrr.c [TEST_REV]: #include "b-esds.h".
	[TEST_REV] (yarrrr): Likewise.
	* base.h (struct hshentries): Delete.
	(buildrevision, genrevs, gr_revno): Update func decls.

2010-05-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Rename ‘struct hshentry’ to ‘struct delta’.

	* b-grok.c: Do s/struct hshentry/struct delta/g.
	* b-kwxout.c: Likewise.
	* b-kwxout.h: Likewise.
	* base.h: Likewise.
	* ci.c: Likewise.
	* co.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsgen.c: Likewise.
	* rcsmerge.c: Likewise.
	* rcsrev.c: Likewise.
	* rlog.c: Likewise.
	* yarrrr.c: Likewise.

2010-05-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘str_save’ more.

	* co.c (getancestor, main): Use ‘str_save’.
	* merger.c (normalize_arg): Likewise.
	* rcsclean.c (get_directory): Likewise.
	* rcsdiff.c (main): Likewise.

2010-05-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘SINGLE’ et al more (instead of ‘SHARED’).

	* b-divvy.h (FZLLOC): New macro.
	* b-fro.c (fro_open): Use ‘FZLLOC’, ‘SINGLE’.
	* b-grok.c (full): Use ‘FZLLOC’.
	* b-kwxout.c (keyreplace): Use ‘SINGLE’.
	* rcsedit.c (swapeditfiles): Use ‘FZLLOC’.
	* rcsfnms.c (InitAdmin): Clear ‘REPO (r)’.
	(pairnames): Use ‘SINGLE’.
	* rcsrev.c (fully_numeric): Use ‘SINGLE’.

2010-05-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move ‘program’ references from global scope into ‘top’.
